--- a/Insurance Project/src/main/resources/application.properties
+++ b/Insurance Project/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+
